Add css and js files

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,1 +1,10 @@
-hello world
+<html>
+<head>
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <script type="text/javascript" src="js/index.js"></script>
+</head>
+<body>
+    <div id="message">Hello World</div>
+You ho ho Mother
+</body>
+</html>
